{
  "version": 4,
  "terraform_version": "0.13.7",
  "serial": 9,
  "lineage": "d23a1080-6864-a0db-a36c-4e374e6d4ed7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:317555927252:internet-gateway/igw-00566b9d4851b48a0",
            "id": "igw-00566b9d4851b48a0",
            "owner_id": "317555927252",
            "tags": {
              "Name": "terraform-aws-igw"
            },
            "tags_all": {
              "Name": "terraform-aws-igw"
            },
            "vpc_id": "vpc-080035ae5f3049de5"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:317555927252:route-table/rtb-047289cd2af7e307d",
            "id": "rtb-047289cd2af7e307d",
            "owner_id": "317555927252",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00566b9d4851b48a0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform_Main_table-testing"
            },
            "tags_all": {
              "Name": "Terraform_Main_table-testing"
            },
            "vpc_id": "vpc-080035ae5f3049de5"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030158c91072af451",
            "route_table_id": "rtb-047289cd2af7e307d",
            "subnet_id": "subnet-0ec226033dfc213bc"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.subnet1-public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:317555927252:security-group/sg-04a5c45d6243ec972",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04a5c45d6243ec972",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "317555927252",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-080035ae5f3049de5"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:317555927252:subnet/subnet-0ec226033dfc213bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.11.1.0/24",
            "id": "subnet-0ec226033dfc213bc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "317555927252",
            "tags": {
              "Name": "Terraform_Public_Subnet1-testing"
            },
            "tags_all": {
              "Name": "Terraform_Public_Subnet1-testing"
            },
            "vpc_id": "vpc-080035ae5f3049de5"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:317555927252:subnet/subnet-0dba02e4ae44222b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.11.2.0/24",
            "id": "subnet-0dba02e4ae44222b3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "317555927252",
            "tags": {
              "Name": "Terraform_Public_Subnet2-testing"
            },
            "tags_all": {
              "Name": "Terraform_Public_Subnet2-testing"
            },
            "vpc_id": "vpc-080035ae5f3049de5"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:317555927252:subnet/subnet-085e05cf323bb0101",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.11.3.0/24",
            "id": "subnet-085e05cf323bb0101",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "317555927252",
            "tags": {
              "Name": "Terraform_Public_Subnet3-testing"
            },
            "tags_all": {
              "Name": "Terraform_Public_Subnet3-testing"
            },
            "vpc_id": "vpc-080035ae5f3049de5"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:317555927252:vpc/vpc-080035ae5f3049de5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.11.0.0/16",
            "default_network_acl_id": "acl-02c2a04b617dfd9b6",
            "default_route_table_id": "rtb-02b4a315bdbe10de6",
            "default_security_group_id": "sg-0156721120ecad3e3",
            "dhcp_options_id": "dopt-09f7e8951709c0e88",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-080035ae5f3049de5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02b4a315bdbe10de6",
            "owner_id": "317555927252",
            "tags": {
              "Env": "prod",
              "Name": "terraform-aws-testing",
              "Owner": "Azure Sandeep"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "terraform-aws-testing",
              "Owner": "Azure Sandeep"
            }
          }
        }
      ]
    }
  ]
}